--- a/content/posts/2020-02-19-toc.md
+++ b/content/posts/2020-02-19-toc.md
@@ -7,6 +7,11 @@ date: 2019-12-12T15:56:54+01:00
 baseline: "the library that prints the web"
 header: "tryout"
 intro: "You got some HTML content you want to make a book with, but it would takes too much time to set the ids and hyperlinks? We got you covered!" 
+tags: 
+- guide
+- pagedjs
+- hooks
+author: "Julie Blanc"
 ---
 
 
