--- a/content/posts/2020-02-19-toc.md
+++ b/content/posts/2020-02-19-toc.md
@@ -19,9 +19,9 @@ tags:
 In this part of the doc, we'll show you how to build a table of contents using a custom script and the css  function `target-counter()` for the `content` property.
 
 
-## Build the table of contentss from your html
+## Build the table of contents from your html
 
-In HTML, a table of contentss is a `<nav>` elements that contain a list of the reveleant titles of your document with a link to the unique identifier of each. This part can be done with your own tool/generator but here is an exemple of a script to generate a table of contentss in vanilla javascript: 
+In HTML, a table of contents is a `<nav>` elements that contain a list of the reveleant titles of your document with a link to the unique identifier of each. This part can be done with your own tool/generator but here is an exemple of a script to generate a table of contents in vanilla javascript: 
 
 ```js
 function createToc(config){
@@ -81,7 +81,7 @@ Copy this script to a `.js` and link this file to your document.
 
 
 
-The table of contentss need to be generated before paged.js fragment the content into pages. Therefore, you need to register the handler `beforeParsed()` and call the table of contentss script inside.   
+The table of contents need to be generated before paged.js fragment the content into pages. Therefore, you need to register the handler `beforeParsed()` and call the table of contents script inside.   
 
 Add this code in the `head` of you html document after the call for paged.js script:
 
@@ -122,7 +122,7 @@ Add this code in the `head` of you html document after the call for paged.js scr
 
 ## Generate page numbers
 
-Thanks to the previous script, your content is now structured using `id` for the heading, and the table of contentss we created use hyperlinks to those `#id`:
+Thanks to the previous script, your content is now structured using `id` for the heading, and the table of contents we created use hyperlinks to those `#id`:
 
 ```html
 <!-- the headings in the text-->
@@ -133,7 +133,7 @@ Thanks to the previous script, your content is now structured using `id` for the
 ```
 
 ```html
-<!-- the table of contentss-->
+<!-- the table of contents-->
 <ul id="toc">
   <li><a href="#pre-digital_era">Pre-digital era</a></li>
   <li><a href="#digital_era">Digital era</a></li>
@@ -151,7 +151,7 @@ In the CSS, the `target-counter` property is used within `::before` and `::after
 
 
 
-## Add styles to the table of contentss
+## Add styles to the table of contents
 
 If you need to add counters or leaders to your table of contents generated above, here is an exemple of CSS you can use:
 
