--- a/content/posts/2020-04-01-pagedjs-0-1-40.md
+++ b/content/posts/2020-04-01-pagedjs-0-1-40.md
@@ -1,7 +1,7 @@
 ---
 title: "Pagedjs 0.1.40"
 date: 2020-04-01T18:16:44+01:00
-draft: true
+draft: false
 author: "Julien"
 class: 
 intro: "This week, paged.js turns 0.1.40. Happy new release day! Here come a couple of fixes and some new features"
