--- a/content/posts/2020-04-01-pagedjs-0-1-40.md
+++ b/content/posts/2020-04-01-pagedjs-0-1-40.md
@@ -9,7 +9,7 @@ intro: "This week, paged.js turns 0.1.40. Happy new release day! Here come a cou
 
 ## New release!
 
-The 0.1.40 is now available to download from [unpkg](https://unpkg.com) or [npm](https://www.npmjs.com/package/pagedjs) (and our [release page](/documentation/releases).
+The 0.1.40 is now available to download from [unpkg](https://unpkg.com) or [npm](https://www.npmjs.com/package/pagedjs) (and on our [release page](/documentation/releases)).
 
 In this release:
 
@@ -17,9 +17,11 @@ In this release:
 - Antonio Norman (@antman3351) [found a bug and its fix](https://gitlab.pagedmedia.org/tools/pagedjs/issues/180), when you had multiple `string` elements on the same page.
 - Support for period in `id` attribute: `.` is for `class` and `#` is for `id`. But the specs allow you to use a `.` in an `id`!
 Paged.js can now handle `<p id="#this.paragraph">` without crashing.
-- @Stouffi fixed a couple of bugs in the chunker, and documented those quite well.
+- @Stouffi fixed a couple of bugs in the chunker, and documented those quite well [here](https://gitlab.pagedmedia.org/tools/pagedjs/merge_requests/101) and [there]https://gitlab.pagedmedia.org/tools/pagedjs/merge_requests/98).
 - Fred Chasen (@fchasen) update the Jest infrastructure so tests are now running fine.
 - Guillaume (@mogztter) wanted to be sure that we’d all follow the best practices without having to spend hours checking our spaces/tabs issues, so he set up eslint, put is hands in 58 files, cleaned all the tabulation issues we had in the code and updated.
 
-Thanks to all of those who contributed :)
+Thanks to our awesome contributors you can now enjoy this new version.
+
+See you all very soon!
 
